# ghif

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  demo.tape  mise.toml
.github/workflows/: ci.yml  pages.yaml  release.yml
pages/: index.html
src/: error.rs  format.rs  github.rs  lib.rs  main.rs
