[package]
authors = ["kiwamizamurai"]
description = "CLI tool to fetch GitHub issues and save them as Markdown or XML files"
edition = "2021"
license = "MIT"
name = "ghif"
version = "1.0.0"
repository = "https://github.com/kiwamizamurai/ghif"
keywords = ["github", "cli", "issues", "markdown", "xml"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "4.0", features = ["derive"]}
console = "0.15"
indicatif = "0.17"
octocrab = "0.32"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"]}
url = "2.5"
